[package]
name = "ez_logging"
description = "A simple, dirt-cheap logging system"
license = "Apache-2.0"
version = "0.1.3"
edition = "2021"

[dependencies]
chrono = "0.4"

tokio = { version = "1.40.0", optional = true, features = [ "fs", "io-std", "sync", "io-util" ] }

[features]
async-tokio = [ "tokio" ]

